--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -13,7 +13,7 @@
 			<div class="col-md-4 col-sm-6 col-xs-12">
 				<div id="boxes">
 					<div id="sect">Chicken</div>
-					<div id="text">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</div>			
+					<div id="text">Find my design more attractive than yours  lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</div>			
 				</div>
 			</div>
 		</section>
